app/assets/stylesheets/zammad.css.scss
/* ... */
  .main-navigation .dropdown-icon {
    fill: hsl(206,7%,37%);
  }

.tasks {
  background: #2c2d36;
  flex: 1;
}

  .tasks.tasks--standalone {
    background: none;
    margin: 8px 0 0;
    padding: 0;
  }

    .tasks--standalone .task {
      padding: 0;
      margin-bottom: 9px;
      display: flex;
    }

    .tasks--standalone .name {
      @extend .u-highlight, .u-textTruncate;
    }

    .tasks--standalone .time {
      color: hsl(198,19%,72%);
    }

    .tasks--standalone .icon-priority {
      margin-right: 4px;
      margin-top: 2px;
    }

  .nav-tab {
    padding: 10px 15px 7px 0;
    position: relative;
    color: #808080;
    display: flex;
    align-items: center;
    @extend .u-clickable;
  }

    .tasks-navigation .nav-tab {
      height: 38px;
      border-bottom: 1px solid #33363e;
    }

    .tasks-navigation .nav-tab:not(.is-active):hover {
      background: #26272e;
    }

    .navigation .nav-tab-name {
      text-align: left;
      padding-bottom: 2px;
    }

    .tasks-navigation .nav-tab-icon .error {
      transform: scale(0.85);
    }

  .nav-tab:hover {
    color: #808080;
    text-decoration: none;
  }

  .nav-tab.is-active,
  .nav-tab.nav-tab--search:hover {
    background: #389ed9;
    color: white;

    .nav-tab-icon .icon {
      fill: white;
    }
  }

  .nav-tab.ui-sortable-helper {
    border-bottom-color: transparent;
  }

  .nav-tab.nav-tab--search {
    height: 30px;
  }

  .nav-tab-icon {
    margin-right: 7px;
    margin-left: 7px;
    margin-top: -3px;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    width: 16px;
  }

  .nav-tab-icon .icon {
    width: 16px;
    height: 16px;
    fill: #808080;
  }

  .nav-tab-icon .icon-diagonal-cross {
    fill: #F35910;
    width: 12px;
    height: 12px;
  }

  .nav-tab-icon .modified-inner-circle {
    position: absolute;
    left: 0;
    top: 0;
    will-change: opacity;
    transform: translateZ(0);
    animation: fade 1.8s ease-in-out infinite;
  }

  @keyframes fade {
    54% { opacity: 1 }
    90% { opacity: 0 }
    to { opacity: 1 }
  }

  .nav-tab-icon .icon.icon-loading {
    animation: rotateplane 1.2s infinite ease-in-out;
    fill: $supergood-color;
  }

  .nav-tab-close {
    position: absolute;
    right: 0;
    top: 0;
    width: 50px;
    height: 100%;
    visibility: hidden;
    @extend .u-clickable;
    display: flex;
    align-items: center;
    justify-content: center;
  }

    .nav-tab:hover .nav-tab-close {
      visibility: visible;
    }

    .nav-tab-close-inner {
      width: 19px;
      height: 19px;
      background-color: #2c2d36;
      border-radius: 100%;
      display: flex;
      align-items: center;
      justify-content: center;
    }

    .nav-tab-close:hover .nav-tab-close-inner {
      background-color: #972e29;
    }

    .nav-tab-close svg {
      width: 9px;
      height: 9px;
      fill: white;
      opacity: 0.3;
    }

    .nav-tab-close:hover svg {
      opacity: 1;
    }

.level-1.is-active {
  background-color: #38ae6a;
}
.level-1 .icon-priority,
.level-1.icon-priority {
  fill: #38ae6a;
}

.level-2.is-active {
  background-color: #f35910;
}
.level-2 .icon-priority,
.level-2.icon-priority {
  fill: #f35910;
}

.level-3.is-active {
  background-color: #faab00;
}
.level-3 .icon-priority,
.level-3.icon-priority {
  fill: #faab00;
}

.search {
  padding: 11px 5px 4px 10px;
  border-bottom: 1px solid rgba(240, 250, 255, .05);
  flex-shrink: 0;
  display: flex;
  background-color: inherit;
}
  
  .search-holder {
    flex: 1;
    border-radius: 15px;
    position: relative;
    transition: 240ms;
  }

  .empty-search {
    position: absolute;
    right: 0;
    top: 0;
    height: 30px;
    width: 40px;
    z-index: 1;
    visibility: hidden;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
  }

  .empty-search .icon-diagonal-cross {
    fill: white;
    opacity: 0.5;
  }

    .filled.search .empty-search {
      visibility: visible;
    }

  .search input[type=search] {
    width: 100%;
    padding: 5px 33px 5px 33px;
    height: 30px;
    color: #ECECEC;
    background: #31373b;
    line-height: 20px;
    outline: none;
    border: none;
    border-radius: 15px;
    position: relative;
    z-index: 1;
    appearance: textfield;
  }

  input[type=search]::-webkit-search-cancel-button,
  input[type=search]::-webkit-search-decoration {
    -webkit-appearance: none;
  }

  .search .icon-magnifier {
    position: absolute;
    top: 8px;
    left: 10px;
    z-index: 2;
    opacity: 0.5;
    fill: white;
  }

  .search.focused .search-holder {
    margin-right: -46px;
  }

  .search.focused .logo {
    opacity: 0;
    z-index: -1;
  }

  .search .logo {
    position: relative;
    @extend .u-clickable, .zIndex-5;
    margin: -4px 10px 0 12px;
    transition: 240ms;
  }

  .search .logo .icon-logo {
    position: relative;
  }

    .search .logo .activity-counter {
      height: 20px;
      min-width: 21px;
      position: absolute;
      right: -3px;
      bottom: 2px;
      padding: 0 4px;
      font-size: 12px;
      font-weight: 300;
      line-height: 15px;
      text-align: center;
      color: white;
      text-shadow: 0 1px 1px rgba(0,0,0,.21);
      background: hsl(360,71%,60%);
      border-radius: 10px;
      border: 2px solid hsl(233,10%,16%);
    }

    .search .logo .activity-counter:empty {
      display: none;
    }

  .search .custom-dropdown-menu {
    margin: 0;
    padding: 0;
    list-style: none;
    background: #26272e;
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    top: 53px;
    z-index: 1002;
    display: none;
    overflow: scroll;
  }

  .search.open .custom-dropdown-menu {
    display: block;
  }

  .search .custom-dropdown-menu .divider {
    height: 1px;
    background: #2f3238;
    margin: 14px 0 17px;
  }
/* ... */

